--- a/QuanLyPhongTro/QuanLyChungCuKV.resx
+++ b/QuanLyPhongTro/QuanLyChungCuKV.resx
@@ -120,24 +120,24 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnLoad.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAOsAAADrASts18IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADgUlEQVRYR72XWW9NURTHzxdQHwGdbk2REENJlGeCSHggxggiQSLxggetITyg9962OulgalU6aLXV
-        JsQUOsTYyfjc4iNU/a3/2efcM+07SWsnv5uz91rn7LXXWnvtuw1dy40iLyuCc9kRDAoTwh8BacJ3JnIi
-        GMgKoyhUjJD1+fgtswKzs8Oolhd/uz40XfCbVUKGNZ235V3DXBGOWMozyfC8EsyxplUtdBmzRDDkU0yK
-        uBfLKvWyJIzR29b0hmG5XacYl6JnQMdnoOYd8OgbsLNZrxePnCgqzMmZcDKQVswPdQAXnjv9UBRoHgXW
-        1Hj1kjCZWYJcQyw5rxHGoJvX1wNLyp2xphE1qVtv+33g9GPvWAoUGvLDraYTYuNdoEfcG+4DGoeB0gE1
-        nooBlPt1NPTTgF++QRMJjTn5wlJn7GQvcLwbOCghuPjCGQ+VAC1jTgj2tALdX4EuYW+bo6fhBw2Y8g2a
-        0O3FsnL3WJ5MRE/wufCpk4ScbIcrCds+qQWQVjHMHtcwRQN0AjPmDUPesXV1wPVBpx9vG9IoGkT47Je7
-        iWsAYczpdq68QCZnSFbf0Ou6WVSmtinhs07HJqEBhDGn28tk5fkpTJ4uWgNo9T5JHiaQOwlngoABK6qA
-        3u/AiR4F3b5cxvx6qcKtXPdeJS13i18eMKD6rYq33WfiVb3x6qTK0gq1FZmo3LpXXwd1AgawpKYylgpb
-        GlUi2n3ddwIGXHoJ7Gpx+rulqLiLTjrMl/xhCI90Ks8ek4T26wQM4Ja7/VHVAHLrgz52qbJYEvrwQ2DD
-        Hb08YIANXyQ62XQS1wCbTQ3qMDolBw1dqtPRkV8NrBJ0MjcJDeChclNCwF3ButAutZ/1Xafr5soroF62
-        HuGzTseGBmgPI8KsdR+pzOit97w6frhqTmz3+ZzAE+Zh9NM3GCORAUzMM0/UBPsfODp+A1iEEhgwbvB/
-        u0ZgQrfzY2trVTh4/Noh4Cl3oF2dmsyRo13Oe+4Q6IpPjCj6DF4atEKLzZKEkX612gWuJHQXFR7L/iLD
-        VSdYuSKMswZvLNJJ+yLS+cWpDwXiodok574G9aeUTTq8seiU4rKtSVU5hoL1fmWaB5Zc/crNydn++8Uk
-        ilHPxYSN1yURDgeUp5+hwNXMbiLMECqFSUt5Opmk2+lta7r4jckhLxQK/cK48K/X83FuNWZ7LOE8zTD+
-        Ai+8hsKdbzrwAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOBSURBVFhHvZdZ
+        b01RFMfPF1AfAZ1uTZEQQ0mUZ4JIeCDGCCJBIvGCB60hPKD33rY66WBqVTpotdUmxBQ6xNjJ+NziI1T9
+        rf/Z59wz7TtJaye/m7P3Wufstddae+27DV3LjSIvK4Jz2REMChPCHwFpwncmciIYyAqjKFSMkPX5+C2z
+        ArOzw6iWF3+7PjRd8JtVQoY1nbflXcNcEY5YyjPJ8LwSzLGmVS10GbNEMORTTIq4F8sq9bIkjNHb1vSG
+        YbldpxiXomdAx2eg5h3w6Buws1mvF4+cKCrMyZlwMpBWzA91ABeeO/1QFGgeBdbUePWSMJlZglxDLDmv
+        Ecagm9fXA0vKnbGmETWpW2/7feD0Y+9YChQa8sOtphNi412gR9wb7gMah4HSATWeigGU+3U09NOAX75B
+        EwmNOfnCUmfsZC9wvBs4KCG4+MIZD5UALWNOCPa0At1fgS5hb5ujp+EHDZjyDZrQ7cWycvdYnkxET/C5
+        8KmThJxshysJ2z6pBZBWMcwe1zBFA3QCM+YNQ96xdXXA9UGnH28b0igaRPjsl7uJawBhzOl2rrxAJmdI
+        Vt/Q67pZVKa2KeGzTscmoQGEMafby2Tl+SlMni5aA2j1PkkeJpA7CWeCgAErqoDe78CJHgXdvlzG/Hqp
+        wq1c914lLXeLXx4woPqtirfdZ+JVvfHqpMrSCrUVmajculdfB3UCBrCkpjKWClsaVSLafd13AgZcegns
+        anH6u6WouItOOsyX/GEIj3Qqzx6ThPbrBAzglrv9UdUAcuuDPnapslgS+vBDYMMdvTxggA1fJDrZdBLX
+        AJtNDeowOiUHDV2q09GRXw2sEnQyNwkN4KFyU0LAXcG60C61n/Vdp+vmyiugXrYe4bNOx4YGaA8jwqx1
+        H6nM6K33vDp+uGpObPf5nMAT5mH00zcYI5EBTMwzT9QE+x84On4DWIQSGDBu8H+7RmBCt/Nja2tVOHj8
+        2iHgKXegXZ2azJGjXc577hDoik+MKPoMXhq0QovNkoSRfrXaBa4kdBcVHsv+IsNVJ1i5IoyzBm8s0kn7
+        ItL5xakPBeKh2iTnvgb1p5RNOryx6JTisq1JVTmGgvV+ZZoHllz9ys3J2f77xSSKUc/FhI3XJREOB5Sn
+        n6HA1cxuIswQKoVJS3k6maTb6W1ruviNySEvFAr9wrjwr9fzcW41Znss4TzNMP4CL7yGwp1vOvAAAAAA
+        SUVORK5CYII=
 </value>
   </data>
 </root>
